@@ -1,5 +1,10 @@
 2007-04-04  William Jon McCann  <mccann@jhu.edu>
 
+	* common/test-log.c: (test_log), (main):
+	Add file.
+
+2007-04-04  William Jon McCann  <mccann@jhu.edu>
+
 	* common/gdm-log.c: (gdm_log_init):
 	* daemon/misc.h:
 	Fix building on Solaris.
